--- a/aboutCSS.html
+++ b/aboutCSS.html
@@ -9,7 +9,6 @@
   </head>
   <header>
     <h1>Task 2</h1>
-    <p class="pHeader">by Lucas Mårdby</p>
   </header>
   <body>
     <!--Questions and Answers-->
@@ -98,9 +97,7 @@
 
     <!--Footer Menu-->
     <footer>
-      <a href="index.html" target="_blank" class="headerText"
-        ><p>Homepage</p></a
-      >
+      <a href="index.html" target="_blank"><p>Homepage</p></a>
       <a href="author.html" target="_blank"><p>Author Page</p></a>
     </footer>
   </body>
