--- a/author.html
+++ b/author.html
@@ -7,18 +7,19 @@
     <title>Assignment 4 - Lucas Mårdby</title>
     <link rel="stylesheet" href="design.css" />
   </head>
-  <body>
-    <!--Header-->
-    <header>
-      <h1>BRANDON SANDERSON</h1>
+  <!--Header-->
+  <header>
+    <div>
       <blockquote>
         <pre>Life before Death<br>Strength before Weakness<br>Journey before Destination.</pre>
       </blockquote>
-    </header>
-
+    </div>
+    <h1>BRANDON SANDERSON</h1>
+  </header>
+  <body>
     <!--Contents List-->
-    <aside class="asideContents">
-      <h2 style="margin-left: 3vw">Contents</h2>
+    <aside>
+      <h2>Contents</h2>
       <h3>
         <a href="#Cosmere">The Cosmere</a><br />
         <a href="#Magic">Hard and Soft Magic</a><br />
@@ -32,103 +33,75 @@
       <img
         src="Images/brandon.jpg"
         alt="Image of the author, Brandon Sanderson"
-        class="imgBrandon"
       />
     </a>
-    <aside class="asideIntro">
-      <h2 class="introductionTitleContainer">Introduction</h2>
-      <p class="introductionTextContainer">
-        BRANDON SANDERSON is an American author of high fantasy and science
-        fiction, best know for the <em>Mistborn</em> and
-        <em>The Stormlight Archives</em> series, as well as finishing Robert
-        Jordan's <em>Wheel of Time</em>. He created the Sanderson's Laws of
-        Magic and thus famously popularized the fantasy concepts of "Hard magic"
-        and "Soft magic".<br />
-        <br />
+    <h2>Introduction</h2>
+    <p>
+      BRANDON SANDERSON is an American author of high fantasy and science
+      fiction, best know for the <em>Mistborn</em> and
+      <em>The Stormlight Archives</em> series, as well as finishing Robert
+      Jordan's <em>Wheel of Time</em>. He created the Sanderson's Laws of Magic
+      and thus famously popularized the fantasy concepts of "Hard magic" and
+      "Soft magic".<br />
+      <br />
 
-        He was born in 1975 in Nebraska, USA, and was an avid reader and writer
-        of fantasy authors such as Robert Jordan, Anne McCaffrey, and Orson
-        Scott Card, all through junior high and high school. In 1994 Sanderson
-        enrolled as a biochemistry major at Brigham Young University, but after
-        a two-year leave of absense, returned to his studies instead as an
-        English major. While studying full-time during the day, Brandon worked
-        nights as a desk clerk to pay for his schooling, and wrote as much as he
-        could during the dead shifts. It was in 2003, after finishing thirteen
-        novels, seven of which during his undergraduate years alone, and
-        accumulating a substantial pile of rejection letters, that he got his
-        first call from an editor. They were asking for one of his earlier
-        books, the manuscript of which he had submitted a year and a half
-        before. But in 2005, the first of his fantasy novels, <em>Elantris</em>,
-        was published.<br />
-        <br />
+      He was born in 1975 in Nebraska, USA, and was an avid reader and writer of
+      fantasy authors such as Robert Jordan, Anne McCaffrey, and Orson Scott
+      Card, all through junior high and high school. In 1994 Sanderson enrolled
+      as a biochemistry major at Brigham Young University, but after a two-year
+      leave of absense, returned to his studies instead as an English major.
+      While studying full-time during the day, Brandon worked nights as a desk
+      clerk to pay for his schooling, and wrote as much as he could during the
+      dead shifts. It was in 2003, after finishing thirteen novels, seven of
+      which during his undergraduate years alone, and accumulating a substantial
+      pile of rejection letters, that he got his first call from an editor. They
+      were asking for one of his earlier books, the manuscript of which he had
+      submitted a year and a half before. But in 2005, the first of his fantasy
+      novels, <em>Elantris</em>, was published.<br />
+      <br />
 
-        To touch on style, Brandon Sanderson is famous for his his rich, deeply
-        though out fictional settings and clever systems of magic. While not
-        known for flowery prose, as Sanderson keeps his writing rather cut-down
-        and to-the-point, readers can always expect great worldbuilding and
-        problems solved in innovative ways through the magic he builds.
-      </p>
-    </aside>
+      To touch on style, Brandon Sanderson is famous for his his rich, deeply
+      though out fictional settings and clever systems of magic. While not known
+      for flowery prose, as Sanderson keeps his writing rather cut-down and
+      to-the-point, readers can always expect great worldbuilding and problems
+      solved in innovative ways through the magic he builds.
+    </p>
 
     <!--Cosmere-->
-    <img
-      src="images/cosmereSymbol.png"
-      alt="Symbol of The Cosmere"
-      class="imgSymbol"
-    />
-    <img
-      src="images/cosmereMap.png"
-      alt="Starmap of The Cosmere"
-      class="imgMap"
-    />
-    <aside class="asideCosmere">
-      <h2
-        id="Cosmere"
-        class="introductionTitleContainer"
-        style="padding-left: 30px"
-      >
-        The Cosmere
-      </h2>
-      <p class="textContainer">
-        THE COSMERE is the fictional universe many of Sanderson's fantasy novels
-        take place in. While the stories take place in different settings,
-        different planets, all these Cosmere books share the same myth of
-        creation and cosmology, which gives ground for the underlying systems of
-        magic in these connected worlds. Of course, you can enjoy all of these
-        books and series on their own, but since all the worlds in the Cosmere
-        are connected, that means that characters, magic, and other ideas from
-        one series might show up in another. If you're astute, you may catch one
-        of these <em>Worldhoppers</em> as a reward now and then. <br />
-        <br />
-        The idea of the Cosmere came to Sanderson when he had the idea to create
-        an epic-length series that wouldn't demand readers to buy a ridiculous
-        amounts of books. Because of this, he has created a 'secret epic' by
-        hiding connections to his other works and series within each novel.
-        <br />
-        <br />
-        The cosmology begins with a mysterious being known as
-        <em>Adolnalsium</em>, who was killed by a group of conspirators, causing
-        its magical power to shatter into sixteen different Shards. Sixteen of
-        those conspirators, hence referred to as Vessels, took these Shards and
-        travelled to new worlds to add or extend their systems of magic. Each
-        Shard has an Intent, such as <em>Honor</em> or <em>Ambition</em>, and a
-        Vessels personality is changed in alignment with this intent. A man
-        known as Hoid, or sometimes Wit, is seen or mentioned in a large amount
-        of the Cosmere books. He is a Worldhopper, and travelles between these
-        Shardworlds, to further a so-far unknown agenda. <br />
-        <br />
-
-        <img
-          src="images/cosmereSymbol.png"
-          alt="Symbol of The Cosmere"
-          style="width: 50px; margin-left: 20vw"
-        />
-      </p>
-    </aside>
+    <h2 id="Cosmere">The Cosmere</h2>
+    <p>
+      THE COSMERE is the fictional universe many of Sanderson's fantasy novels
+      take place in. While the stories take place in different settings,
+      different planets, all these Cosmere books share the same myth of creation
+      and cosmology, which gives ground for the underlying systems of magic in
+      these connected worlds. Of course, you can enjoy all of these books and
+      series on their own, but since all the worlds in the Cosmere are
+      connected, that means that characters, magic, and other ideas from one
+      series might show up in another. If you're astute, you may catch one of
+      these <em>Worldhoppers</em> as a reward now and then. <br />
+      <br />
+      The idea of the Cosmere came to Sanderson when he had the idea to create
+      an epic-length series that wouldn't demand readers to buy a ridiculous
+      amounts of books. Because of this, he has created a 'secret epic' by
+      hiding connections to his other works and series within each novel.
+      <br />
+      <br />
+      The cosmology begins with a mysterious being known as
+      <em>Adolnalsium</em>, who was killed by a group of conspirators, causing
+      its magical power to shatter into sixteen different Shards. Sixteen of
+      those conspirators, hence referred to as Vessels, took these Shards and
+      travelled to new worlds to add or extend their systems of magic. Each
+      Shard has an Intent, such as <em>Honor</em> or <em>Ambition</em>, and a
+      Vessels personality is changed in alignment with this intent. A man known
+      as Hoid, or sometimes Wit, is seen or mentioned in a large amount of the
+      Cosmere books. He is a Worldhopper, and travelles between these
+      Shardworlds, to further a so-far unknown agenda. <br />
+      <br />
+    </p>
 
     <!--Hard and Soft Magic-->
-    <h2 id="Magic" class="textContainer">Hard and Soft Magic</h2>
-    <p class="textContainer" style="max-width: 60vw">
+    <h2 id="Magic">Hard and Soft Magic</h2>
+    <p>
       AS MENTIONED ABOVE, Sanderson introduced and popularized the concepts of
       <strong>Hard and Soft Magic</strong> with his works of fantasy and
       science-fiction. Lending itself well to Sanderson's worldbuilding and
@@ -147,7 +120,7 @@
       <br />
       <strong>Sanderson's Laws of Magic</strong>
     </p>
-    <ol class="listContainer">
+    <ol>
       <li>
         An author's ability to solve conflict with magic in a satisfying way
         is<br />directly proportionate to how well the reader understands said
@@ -161,7 +134,7 @@
         they<br />can instead expand what they have.
       </li>
     </ol>
-    <p class="textContainer" style="max-width: 60vw">
+    <p>
       These laws for creating fictional worlds and magic systems are then meant
       to be tools or guide lines for writers and authors depending on where on
       the spectrum of <strong>Hard</strong> or <strong>Soft</strong> magic, the
@@ -170,18 +143,8 @@
     </p>
 
     <!--The Secret Project Kickstarter-->
-    <h2 id="Secret" class="textContainer">The 'Secret Project' Kickstarter</h2>
-    <a
-      href="https://www.kickstarter.com/projects/dragonsteel/surprise-four-secret-novels-by-brandon-sanderson"
-      target="_blank"
-    >
-      <img
-        src="images/secretProjects.jpg"
-        alt="The Four Secret Project Novels"
-        class="imgSecrets"
-      />
-    </a>
-    <p class="textContainer" style="max-width: 60vw">
+    <h2 id="Secret">The 'Secret Project' Kickstarter</h2>
+    <p>
       A MOMENT OF SIGNIFICANCE was in March of 2022 when Sanderson announced
       that he had been writing four additional novels in secret during the
       pandemic. Due to the lack of trips and book tours during the years of
@@ -216,8 +179,8 @@
     </p>
 
     <!--Bibliography-->
-    <h2 id="Books" class="textContainer">Bibliography</h2>
-    <p class="textContainer">
+    <h2 id="Books">Bibliography</h2>
+    <p>
       A HANDPLUCKED assortment of Sanderson's large collection of works.<br />
       <br />
       While not a comprehensive list, it includes significant titles both within
@@ -225,11 +188,11 @@
     </p>
 
     <!-- Second Column -->
-    <aside class="asideBooks">
-      <p class="textContainerBibliographyTitles">
+    <aside>
+      <p>
         <strong>The Wheel of Time</strong>
       </p>
-      <ul class="listContainer">
+      <ul>
         <li>
           Books 12 through 14, finished for the late Robert Jordan.
           <ul>
@@ -240,8 +203,8 @@
         </li>
       </ul>
 
-      <p class="textContainerBibliographyTitles"><strong>Cytoverse</strong></p>
-      <ul class="listContainer">
+      <p><strong>Cytoverse</strong></p>
+      <ul>
         <li>"Defending Elysium"</li>
         <li>
           Novels
@@ -262,10 +225,10 @@
         </li>
       </ul>
 
-      <p class="textContainerBibliographyTitles">
+      <p>
         <strong>The Reckoners</strong>
       </p>
-      <ul class="listContainer">
+      <ul>
         <li>
           Novels
           <ul>
@@ -285,8 +248,8 @@
     </aside>
 
     <!-- First Column -->
-    <p class="textContainerBibliographyTitles"><strong>COSMERE</strong></p>
-    <ul class="listContainer">
+    <p><strong>COSMERE</strong></p>
+    <ul>
       <li>Elantris</li>
       <li>
         Mistborn
@@ -338,12 +301,8 @@
 
     <!--Footer Menu-->
     <footer>
-      <a href="index.html" target="_blank"
-        ><p class="footerContainer">Homepage</p></a
-      >
-      <a href="aboutCSS.html" target="_blank"
-        ><p class="footerContainer">About CSS</p></a
-      >
+      <a href="index.html" target="_blank"><p>Homepage</p></a>
+      <a href="aboutCSS.html" target="_blank"><p>About CSS</p></a>
     </footer>
   </body>
 </html>
