--- a/author.html
+++ b/author.html
@@ -7,17 +7,18 @@
     <title>Assignment 4 - Lucas Mårdby</title>
     <link rel="stylesheet" href="design.css" />
   </head>
-  <!--Header-->
-  <header>
-    <div>
-      <blockquote>
-        <pre>Life before Death<br>Strength before Weakness<br>Journey before Destination.</pre>
-      </blockquote>
-    </div>
-    <h1>BRANDON SANDERSON</h1>
-  </header>
   <body>
+    <!--Header-->
+    <header>
+      <div>
+        <blockquote>
+          <pre>Life before Death<br>Strength before Weakness<br>Journey before Destination.</pre>
+        </blockquote>
+      </div>
+      <h1>BRANDON SANDERSON</h1>
+    </header>
     <!--Contents List-->
+    <br />
     <aside>
       <h2>Contents</h2>
       <h3>
@@ -187,67 +188,6 @@
       and outside of the fictional Cosmere.
     </p>
 
-    <!-- Second Column -->
-    <aside>
-      <p>
-        <strong>The Wheel of Time</strong>
-      </p>
-      <ul>
-        <li>
-          Books 12 through 14, finished for the late Robert Jordan.
-          <ul>
-            <li>The Gathering Storm</li>
-            <li>Towers of Midnight</li>
-            <li>A Memory of Light</li>
-          </ul>
-        </li>
-      </ul>
-
-      <p><strong>Cytoverse</strong></p>
-      <ul>
-        <li>"Defending Elysium"</li>
-        <li>
-          Novels
-          <ul>
-            <li>Skyward</li>
-            <li>Starsight</li>
-            <li>Cytonic</li>
-            <li>Defiant</li>
-          </ul>
-        </li>
-        <li>
-          Skyward Flight Novellas
-          <ul>
-            <li>Sunreach</li>
-            <li>ReDawn</li>
-            <li>Evershore</li>
-          </ul>
-        </li>
-      </ul>
-
-      <p>
-        <strong>The Reckoners</strong>
-      </p>
-      <ul>
-        <li>
-          Novels
-          <ul>
-            <li>Steelheart</li>
-            <li>Firefight</li>
-            <li>Calamity</li>
-          </ul>
-        </li>
-        <li>
-          Other Works
-          <ul>
-            <li>Mitosis &#40;<em>Short Story</em>&#41;</li>
-            <li>Lux &#40;<em>Audio Book</em>&#41;</li>
-          </ul>
-        </li>
-      </ul>
-    </aside>
-
-    <!-- First Column -->
     <p><strong>COSMERE</strong></p>
     <ul>
       <li>Elantris</li>
@@ -299,10 +239,68 @@
       </li>
     </ul>
 
+    <p>
+      <strong>The Wheel of Time</strong>
+    </p>
+    <ul>
+      <li>
+        Books 12 through 14, finished for the late Robert Jordan.
+        <ul>
+          <li>The Gathering Storm</li>
+          <li>Towers of Midnight</li>
+          <li>A Memory of Light</li>
+        </ul>
+      </li>
+    </ul>
+
+    <p><strong>Cytoverse</strong></p>
+    <ul>
+      <li>"Defending Elysium"</li>
+      <li>
+        Novels
+        <ul>
+          <li>Skyward</li>
+          <li>Starsight</li>
+          <li>Cytonic</li>
+          <li>Defiant</li>
+        </ul>
+      </li>
+      <li>
+        Skyward Flight Novellas
+        <ul>
+          <li>Sunreach</li>
+          <li>ReDawn</li>
+          <li>Evershore</li>
+        </ul>
+      </li>
+    </ul>
+
+    <p>
+      <strong>The Reckoners</strong>
+    </p>
+    <ul>
+      <li>
+        Novels
+        <ul>
+          <li>Steelheart</li>
+          <li>Firefight</li>
+          <li>Calamity</li>
+        </ul>
+      </li>
+      <li>
+        Other Works
+        <ul>
+          <li>Mitosis &#40;<em>Short Story</em>&#41;</li>
+          <li>Lux &#40;<em>Audio Book</em>&#41;</li>
+        </ul>
+      </li>
+    </ul>
+
     <!--Footer Menu-->
     <footer>
-      <a href="index.html" target="_blank"><p>Homepage</p></a>
-      <a href="aboutCSS.html" target="_blank"><p>About CSS</p></a>
+      <a href="index.html" target="_self"><h4>Homepage</h4></a>
+      <a href="aboutCSS.html" target="_self"><h4>About CSS</h4></a>
+      <a href="artists.html" target="_self"><h4>My Artists</h4></a>
     </footer>
   </body>
 </html>
