--- a/aboutCSS.html
+++ b/aboutCSS.html
@@ -7,10 +7,10 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="design.css" />
   </head>
-  <header>
-    <h1>Task 2</h1>
-  </header>
   <body>
+    <header>
+      <h1>Task 2</h1>
+    </header>
     <!--Questions and Answers-->
     <h1>What is CSS?</h1>
     <p>
@@ -97,8 +97,9 @@
 
     <!--Footer Menu-->
     <footer>
-      <a href="index.html" target="_blank"><p>Homepage</p></a>
-      <a href="author.html" target="_blank"><p>Author Page</p></a>
+      <a href="index.html" target="_self"><h4>Homepage</h4></a>
+      <a href="author.html" target="_self"><h4>Author Page</h4></a>
+      <a href="artists.html" target="_self"><h4>My Artists</h4></a>
     </footer>
   </body>
 </html>
